# solgrid

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  deny.toml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.agents/skills/changelog/: SKILL.md
.agents/skills/release/: SKILL.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-pr.yml  release-tag.yml  release.yml
crates/solgrid/: Cargo.toml  build.rs
crates/solgrid/benches/: startup_bench.rs
crates/solgrid/src/: cache.rs  main.rs
crates/solgrid/src/commands/: check.rs  explain.rs  fix.rs  fmt.rs  graph.rs  list_rules.rs  migrate.rs  mod.rs
crates/solgrid/src/output/: github.rs  json.rs  mod.rs  sarif.rs  text.rs
crates/solgrid_ast/: Cargo.toml
crates/solgrid_ast/src/: lib.rs  natspec.rs  resolve.rs  selectors.rs  symbols.rs
crates/solgrid_cache/: Cargo.toml
crates/solgrid_cache/src/: lib.rs
crates/solgrid_config/: Cargo.toml
crates/solgrid_config/src/: lib.rs  rule_settings.rs
crates/solgrid_diagnostics/: Cargo.toml
crates/solgrid_diagnostics/src/: lib.rs
crates/solgrid_formatter/: Cargo.toml
crates/solgrid_formatter/benches/: format_bench.rs
crates/solgrid_formatter/src/: comments.rs  directives.rs  format.rs  format_expr.rs  format_item.rs  format_stmt.rs  format_ty.rs  ir.rs  lib.rs  printer.rs
crates/solgrid_formatter/tests/: format.rs
crates/solgrid_linter/: Cargo.toml
crates/solgrid_linter/benches/: lint_bench.rs
crates/solgrid_linter/src/: context.rs  engine.rs  fix.rs  lib.rs  registry.rs  rule.rs  source_utils.rs  suppression.rs  testing.rs
crates/solgrid_linter/src/rules/: mod.rs
crates/solgrid_linter/src/rules/best_practices/: code_complexity.rs  constructor_syntax.rs  custom_errors.rs  duplicated_imports.rs  explicit_types.rs  function_max_lines.rs  imports_on_top.rs  max_states_count.rs  mod.rs  natspec_helpers.rs  natspec_params.rs  natspec_returns.rs  no_console.rs  no_empty_blocks.rs  no_floating_pragma.rs  no_global_import.rs  no_unused_error.rs  no_unused_event.rs  no_unused_imports.rs  no_unused_state.rs  no_unused_vars.rs  one_contract_per_file.rs  reason_string.rs  use_natspec.rs  visibility_modifier_order.rs
crates/solgrid_linter/src/rules/docs/: license_identifier.rs  mod.rs  natspec.rs  natspec_contract.rs  natspec_error.rs  natspec_event.rs  natspec_function.rs  natspec_interface.rs  natspec_modifier.rs  natspec_param_mismatch.rs  selector_tags.rs
crates/solgrid_linter/src/rules/gas/: bool_storage.rs  cache_array_length.rs  calldata_parameters.rs  custom_errors.rs  increment_by_one.rs  indexed_events.rs  mod.rs  named_return_values.rs  no_redundant_sload.rs  small_strings.rs  struct_packing.rs  tight_variable_packing.rs  unchecked_increment.rs  use_bytes32.rs  use_constant.rs  use_immutable.rs
crates/solgrid_linter/src/rules/naming/: const_name_snakecase.rs  contract_name_capwords.rs  enum_name_capwords.rs  error_name_capwords.rs  event_name_capwords.rs  foundry_test_functions.rs  func_name_mixedcase.rs  immutable_name_snakecase.rs  interface_starts_with_i.rs  library_name_capwords.rs  mod.rs  modifier_name_mixedcase.rs  named_parameters_mapping.rs  param_name_mixedcase.rs  private_vars_underscore.rs  struct_name_capwords.rs  type_name_capwords.rs  var_name_mixedcase.rs
crates/solgrid_linter/src/rules/security/: arbitrary_send_eth.rs  avoid_selfdestruct.rs  avoid_sha3.rs  avoid_suicide.rs  compiler_version.rs  divide_before_multiply.rs  low_level_calls.rs  mod.rs  msg_value_in_loop.rs  multiple_sends.rs  no_delegatecall_in_loop.rs  no_inline_assembly.rs  not_rely_on_block_hash.rs  not_rely_on_time.rs  payable_fallback.rs  reentrancy.rs  state_visibility.rs  tx_origin.rs  unchecked_transfer.rs  uninitialized_storage.rs
crates/solgrid_linter/src/rules/style/: category_headers.rs  contract_layout.rs  eol_last.rs  file_name_format.rs  func_order.rs  import_path_format.rs  imports_ordering.rs  initialization.rs  max_line_length.rs  mod.rs  no_multiple_empty_lines.rs  no_trailing_whitespace.rs  ordering.rs  prefer_remappings.rs
crates/solgrid_linter/tests/: rules.rs
crates/solgrid_linter/tests/fixtures/best_practices/: explicit_types.sol  no_console.sol
crates/solgrid_linter/tests/fixtures/naming/: const_names.sol  contract_names.sol  func_names.sol
crates/solgrid_linter/tests/fixtures/security/: low_level_calls.sol  tx_origin.sol
crates/solgrid_napi/: Cargo.toml
crates/solgrid_napi/src/: lib.rs
crates/solgrid_parser/: Cargo.toml
crates/solgrid_parser/src/: lib.rs
crates/solgrid_project/: Cargo.toml
crates/solgrid_project/src/: lib.rs
crates/solgrid_server/: Cargo.toml
crates/solgrid_server/src/: actions.rs  builtins.rs  completion.rs  convert.rs  definition.rs  diagnostics.rs  document.rs  format.rs  hover.rs  lib.rs  resolve.rs  semantic.rs  server.rs  signature_help.rs  symbols.rs  workspace_index.rs
crates/solgrid_server/tests/: integration.rs
crates/solgrid_testing/: Cargo.toml
crates/solgrid_testing/src/: lib.rs
crates/solgrid_wasm/: Cargo.toml
crates/solgrid_wasm/src/: lib.rs
docs/: configuration.md  editor-integration.md  editor-security-roadmap.md  output-formats.md  prettier-plugin.md  rules.md  semantic-detectors.md  wasm.md
editors/vscode/: .vscodeignore  README.md  esbuild.mjs  language-configuration.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json  vitest.config.ts
editors/vscode/scripts/: run-lsp-tests.mjs
editors/vscode/src/: config.test.ts  config.ts  coverageOverview.ts  coverageOverviewModel.test.ts  coverageOverviewModel.ts  coverageRun.test.ts  coverageRun.ts  extension.ts  graphPreview.test.ts  graphPreview.ts  graphPreviewRender.ts  run-lsp-tests.test.ts  securityOverview.ts  securityOverviewModel.test.ts  securityOverviewModel.ts
editors/vscode/syntaxes/: solidity.tmLanguage.json
editors/vscode/test/e2e/: extension.test.ts  index.ts  (+1 more)
scripts/: changelog.sh  rules-doc.sh  version.sh
(+22 files in other folders)
