[workspace]
resolver = "2"
members = [
    "crates/solgrid",
    "crates/solgrid_ast",

    "crates/solgrid_config",
    "crates/solgrid_diagnostics",
    "crates/solgrid_formatter",
    "crates/solgrid_linter",
    "crates/solgrid_napi",
    "crates/solgrid_parser",
    "crates/solgrid_server",

    "crates/solgrid_wasm",
]

[workspace.package]
version = "0.0.9"
edition = "2021"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/TateB/solgrid"
homepage = "https://github.com/TateB/solgrid"
keywords = ["solidity", "linter", "formatter", "ethereum", "security"]
categories = ["development-tools", "command-line-utilities"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
# Internal crates
solgrid_ast = { path = "crates/solgrid_ast" }

solgrid_config = { path = "crates/solgrid_config" }
solgrid_diagnostics = { path = "crates/solgrid_diagnostics" }
solgrid_formatter = { path = "crates/solgrid_formatter" }
solgrid_linter = { path = "crates/solgrid_linter" }
solgrid_parser = { path = "crates/solgrid_parser" }
solgrid_server = { path = "crates/solgrid_server" }


# LSP
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }

# Solar parser
solar-ast = "0.1"
solar-config = "0.1"
solar-data-structures = "0.1"
solar-interface = "0.1"
solar-parse = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"

# Hashing
sha2 = "0.10"
sha3 = "0.10"

# Parallelism
rayon = "1"

# File discovery
ignore = "0.4"
glob = "0.3"

# Diagnostic rendering
ariadne = "0.5"

# Testing
insta = { version = "1", features = ["yaml"] }
tempfile = "3"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# NAPI-RS bindings
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"
napi-build = "2"

# WASM bindings
wasm-bindgen = "0.2"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = 3
