[package]
name = "solgrid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A blazing-fast Solidity linter and formatter"

[[bin]]
name = "solgrid"
path = "src/main.rs"

[dependencies]
solgrid_config = { workspace = true }
solgrid_diagnostics = { workspace = true }
solgrid_formatter = { workspace = true }
solgrid_linter = { workspace = true }
solgrid_project = { workspace = true }
solgrid_server = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
ariadne = { workspace = true }
ignore = { workspace = true }
glob = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "startup_bench"
harness = false

[lints]
workspace = true
