[package]
name = "solgrid_ast"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AST utilities and helpers for solgrid lint rules"

[dependencies]
solgrid_config = { workspace = true }
solgrid_parser = { workspace = true }
solar-ast = { workspace = true }
solar-interface = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
