[package]
name = "solgrid_cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Content-hash-based incremental cache for solgrid"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
