[package]
name = "solgrid_formatter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Chunk-based Solidity code formatter for solgrid"

[dependencies]
solgrid_ast = { workspace = true }
solgrid_config = { workspace = true }
solgrid_parser = { workspace = true }
solar-ast = { workspace = true }
solar-interface = { workspace = true }
solar-parse = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "format_bench"
harness = false

[lints]
workspace = true
