[package]
name = "solgrid_linter"
version.workspace = true
edition.workspace = true

[dependencies]
solgrid_ast = { workspace = true }
solgrid_config = { workspace = true }
solgrid_diagnostics = { workspace = true }
solgrid_parser = { workspace = true }
solar-ast = { workspace = true }
solar-data-structures = { workspace = true }
solar-interface = { workspace = true }
solar-parse = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
solgrid_testing = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "lint_bench"
harness = false
