[package]
name = "solgrid_linter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lint rule engine with 90+ rules for solgrid"

[dependencies]
solgrid_ast = { workspace = true }
solgrid_config = { workspace = true }
solgrid_diagnostics = { workspace = true }
solgrid_formatter = { workspace = true }
solgrid_parser = { workspace = true }
solar-ast = { workspace = true }
solar-data-structures = { workspace = true }
solar-interface = { workspace = true }
solar-parse = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

[[bench]]
name = "lint_bench"
harness = false

[lints]
workspace = true
