[package]
name = "solgrid_parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Solar parser wrapper for solgrid"

[dependencies]
solar-ast = { workspace = true }
solar-data-structures = { workspace = true }
solar-interface = { workspace = true }
solar-parse = { workspace = true }

[lints]
workspace = true
