[package]
name = "solgrid_project"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared workspace and navigation index for solgrid editor features"

[dependencies]
solgrid_ast = { workspace = true }
solgrid_config = { workspace = true }
solgrid_parser = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
tower-lsp-server = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
