[package]
name = "solgrid_server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LSP server for solgrid editor integration"

[dependencies]
solgrid_ast = { workspace = true }
solgrid_config = { workspace = true }
solgrid_diagnostics = { workspace = true }
solgrid_formatter = { workspace = true }
solgrid_linter = { workspace = true }
solgrid_parser = { workspace = true }
solgrid_project = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
