[package]
name = "solgrid_testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Test utilities and helpers for solgrid"

[dependencies]
solgrid_config = { workspace = true }
solgrid_diagnostics = { workspace = true }
solgrid_linter = { workspace = true }
solgrid_parser = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
