[package]
name = "solgrid_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for solgrid"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solgrid_config = { workspace = true }
solgrid_diagnostics = { workspace = true }
solgrid_formatter = { workspace = true }
solgrid_linter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
